<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_title">
        <ListPreference
            app:icon="@drawable/round_language_24"
            app:defaultValue="@string/language_english_value"
            app:entries="@array/language_options"
            app:entryValues="@array/language_values"
            app:iconSpaceReserved="false"
            app:key="@string/settings_locale"
            app:title="@string/settings_locale_description"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/behaviour">

        <SwitchPreferenceCompat
            app:key="swipe_actions"
            app:defaultValue="true"
            app:summary="@string/disabling_would_stop_the_swipe_actions_in_the_threads_screen_to_archive_and_delete_this_is_enabled_by_default"
            app:title="@string/enable_swipe"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/dev_mode">

        <Preference
            app:key="dev_mode"
            app:summary="View logcat logs"
            app:title="View Logcat logs"/>
    </PreferenceCategory>

<!--    <PreferenceCategory-->
<!--        app:key="settings_sms_security"-->
<!--        app:title="@string/settings_security_category_title">-->
<!--        <Preference-->
<!--            app:icon="@drawable/round_security_24"-->
<!--            app:key="@string/settings_security_end_to_end"-->
<!--            app:summary="@string/settings_security_category_end_to_end_encryption_summary"-->
<!--            app:title="@string/settings_security_category_end_to_end_encryption" />-->
<!--    </PreferenceCategory>-->
</PreferenceScreen>
